--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
                 <tr>
                     <td>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam optio enim qui iure iste id impedit laborum totam tempore, distinctio debitis earum maxime quia ullam cumque nam dolorem. Veniam, assumenda.</p>
+                        <p>Living life in the night.</p>
                     </td>
                 </tr>
             </table>
