--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <table class="center">
                 <tr>
                     <td>
-                        <img class="photo" src="./images/ProfilPicture.jpeg" alt="Mustafa Kürşat Demir">
+                        <img class="photo" src="C:\prv\315769245_537224525001971_4566528935169387738_n.jpg" alt="Mustafa Kürşat Demir">
                     </td>
                 </tr>
         
